Case #27671: Valign form groups to top, fixes firefox form display

--- a/src/css/main.less
+++ b/src/css/main.less
@@ -2263,3 +2263,7 @@ hr.simple-divider {
     margin-right: 0;
     display: inline-block;
 }
+
+.form-group {
+  vertical-align: top;
+}
